--- a/Intranet/css/general.css
+++ b/Intranet/css/general.css
@@ -23,10 +23,10 @@ ul{
 }
 #content{
     /*width:1100px;*/
-    width:80%;
+    /*width:80%;
     min-width:1100px;
     margin:auto;    
-    margin-bottom:20px;
+    margin-bottom:20px;*/
 }
 .dept-block{
     display:inline-block;
