--- a/Intranet/masterPage/MasterPage.master
+++ b/Intranet/masterPage/MasterPage.master
@@ -4,35 +4,39 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <link href="../css/jquery-ui-themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <link href="../css/normalize.css" rel="stylesheet" type="text/css" />        
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css" />
     <link href="../css/gridview.css" rel="stylesheet" type="text/css" />
     <link href="../css/message.css" rel="stylesheet" type="text/css" />
     <link href="../css/tabcontainer.css" rel="stylesheet" type="text/css" />
     <link href="../css/general.css" rel="stylesheet" type="text/css" />
-    <script src="../Scripts/jquery-1.12.4.js" type="text/javascript"></script>
-    <script src="../Scripts/jquery-ui-1.12.0.js" type="text/javascript"></script>
+    <link href="../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <script src="../Scripts/bootstrap.js"></script>
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <%--<link href="~/QC/scrap/css/scrap.css" rel="stylesheet" type="text/css" />--%>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <div id="banner">
-
-            <div class="banner-button">
-                <asp:ImageButton ID="btnHome" runat="server" ImageUrl="~/nizing_intranet/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/Default.aspx" onmouseover="this.src='/nizing_intranet/image/button/home2.png'" onmouseout="this.src='/nizing_intranet/image/button/home1.png'" />
-            </div>        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div id="banner">
+                        <div class="banner-button">
+                            <asp:ImageButton ID="btnHome" runat="server" ImageUrl="~/nizing_intranet/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/Default.aspx" onmouseover="this.src='/nizing_intranet/image/button/home2.png'" onmouseout="this.src='/nizing_intranet/image/button/home1.png'" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="content">
-            <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
-            </asp:ContentPlaceHolder>
+        <div class="container" style="margin-top: 40px;">
+            <div id="content">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
         </div>
-    </div>
     </form>
 </body>
 </html>
