--- a/Nizing/css/report/general.css
+++ b/Nizing/css/report/general.css
@@ -22,9 +22,9 @@ ul{
     margin-right:50px;
 }
 #content{
-    width:1100px;
+    /*width:1100px;
     margin:auto;    
-    margin-bottom:20px;
+    margin-bottom:20px;*/
 }
 .dept-block{
     display:inline-block;
