added set target to SD01

--- a/Nizing/master/report/MasterPage.master
+++ b/Nizing/master/report/MasterPage.master
@@ -12,6 +12,8 @@
     <link href="../../css/tabcontainer.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <script src="../../Scripts/jquery-2.1.4.js"></script>
+    <script src="../../Scripts/jquery.validate.js"></script>
     <script src="../../Scripts/bootstrap.js"></script>
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
