--- a/Nizing/master/report/MasterPage.master
+++ b/Nizing/master/report/MasterPage.master
@@ -6,12 +6,13 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="../../css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/normalize.css" rel="stylesheet" type="text/css" />    
     <link href="../../css/report/gridview.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/message.css" rel="stylesheet" type="text/css" />
     <link href="../../css/tabcontainer.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
     <script src="../../Scripts/jquery-2.1.4.js"></script>
     <script src="../../Scripts/jquery.validate.js"></script>
     <script src="../../Scripts/bootstrap.js"></script>
