product page margin changed

--- a/Nizing/css/general.css
+++ b/Nizing/css/general.css
@@ -157,6 +157,7 @@
 #company-intro .inner-content .content-row .text{    
     width:660px;
     margin-right:6px;
+    font-size:16px;
 }
 #company-intro .inner-content .content-row .img{
     width:300px;
@@ -168,6 +169,7 @@
 #company-culture .inner-content .content-row .text{    
     width:660px;
     margin-right:6px;
+    font-size:16px;
 }
 #company-culture .inner-content .content-row .img{
     width:300px;
@@ -355,7 +357,7 @@
 }
 #product-menu .content-row .button{
     border:solid 1px #CCCCCC;
-    margin-left:42px;
+    margin-left:40px;
 }
 #product-menu .content-row .button:hover{
     border:solid 1px #FF9933;
