--- a/Intranet/masterPage/MasterPage.master
+++ b/Intranet/masterPage/MasterPage.master
@@ -6,16 +6,16 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="../css/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="../css/gridview.css" rel="stylesheet" type="text/css" />
-    <link href="../css/message.css" rel="stylesheet" type="text/css" />
-    <link href="../css/tabcontainer.css" rel="stylesheet" type="text/css" />
-    <link href="../css/general.css" rel="stylesheet" type="text/css" />
-    <link href="../css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
-    <script src="../Scripts/jquery-2.1.4.js"></script>
-    <script src="../Scripts/jquery.validate.js"></script>
-    <script src="../Scripts/bootstrap.js"></script>
+    <link href="/css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="/css/gridview.css" rel="stylesheet" type="text/css" />
+    <link href="/css/message.css" rel="stylesheet" type="text/css" />
+    <link href="/css/tabcontainer.css" rel="stylesheet" type="text/css" />
+    <link href="/css/general.css" rel="stylesheet" type="text/css" />
+    <link href="/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
+    <script src="/Scripts/jquery-2.1.4.js"></script>
+    <script src="/Scripts/jquery.validate.js"></script>
+    <script src="/Scripts/bootstrap.js"></script>
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
