--- a/Intranet/masterPage/Scrap_Master.master
+++ b/Intranet/masterPage/Scrap_Master.master
@@ -2,9 +2,10 @@
 
 <asp:Content ID="Content1" ContentPlaceHolderID="head" Runat="Server">
     <link href="css/scrap.css" rel="stylesheet" type="text/css" />
+    <link href="css/tabcontainer.css" rel="stylesheet" />
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolder1" Runat="Server">
-    <div id="main">
+    <div id="main" style="margin-top:-70px;">
         <div id="leftmenu">
             <div class="left">
                 <ul>
