update phone and address

--- a/Nizing/en/master/index.master
+++ b/Nizing/en/master/index.master
@@ -103,7 +103,7 @@
                     Office Hour: 08:30 ~ 18:00
                 </div>
                 <div style="display: block;">
-                    Powered by Nizing Electric Wire & Cable Co. Ltd. <a href:"tel:+886229016164">(T)+886-2-2901-6164</a> <a href:"tel:+886933272455">(M)+886-933-272-455</a> (F)+886-2-2905-0644 Copyright© 2015 All Rights Reserved
+                    Powered by Nizing Electric Wire & Cable Co. Ltd. <a href="tel:+886229999181">(T)+886-2-2999-9181</a> <a href="tel:+886933272455">(M)+886-933-272-455</a> (F)+886-2-2999-9771 Copyright© 2015 All Rights Reserved
                 </div>
             </div>
         </div>                
