--- a/Nizing/css/template.css
+++ b/Nizing/css/template.css
@@ -189,7 +189,7 @@
     border:solid 1px #CCCCCC;
 }
 #product-content .left .small-pic{
-    display:block;
+    display:inline;
     margin-bottom:5px;
 }
 #product-content .left .small-pic img{
