--- a/Nizing/master/oqs-master.master
+++ b/Nizing/master/oqs-master.master
@@ -5,14 +5,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link href="../css/gridview2.0.css" rel="stylesheet" />
+    <link href="../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />    
+    <script src="../Scripts/jquery-2.1.4.js"></script>
+    <script src="../Scripts/jquery.validate.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
-        <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link href="../css/bootstrap/bootstrap.css" rel="stylesheet" />
-        <link href="../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
-        <script src="../Scripts/jquery-2.1.4.js"></script>
-        <script src="../Scripts/jquery.validate.js"></script>
-        <script src="../Scripts/bootstrap.js"></script>
+
     </asp:ContentPlaceHolder>
 </head>
 <body>
