--- a/Nizing/master/report/oqs-master.master
+++ b/Nizing/master/report/oqs-master.master
@@ -7,12 +7,12 @@
     <title></title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="../css/gridview2.0.css" rel="stylesheet" />
-    <link href="../css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />    
-    <script src="../Scripts/jquery-2.1.4.js"></script>
-    <script src="../Scripts/jquery.validate.js"></script>
-    <script src="../Scripts/bootstrap.js"></script>
+    <link href="~/css/gridview2.0.css" rel="stylesheet" />
+    <link href="~/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/bootstrap/bootstrap-mod.css" rel="stylesheet" />    
+    <script src="~/Scripts/jquery-2.1.4.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
 
     </asp:ContentPlaceHolder>
