--- a/Nizing/master/report/sunrise-master.master
+++ b/Nizing/master/report/sunrise-master.master
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="../../css/normalize.css" rel="stylesheet" type="text/css" />    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
     <link href="../../css/report/gridview.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/message.css" rel="stylesheet" type="text/css" />
