--- a/Nizing/master/report/sunrise-master.master
+++ b/Nizing/master/report/sunrise-master.master
@@ -7,29 +7,38 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="../../css/normalize.css" rel="stylesheet" type="text/css" />    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+    <%--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>--%>
     <link href="../../css/report/gridview.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/message.css" rel="stylesheet" type="text/css" />
     <link href="../../css/tabcontainer.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
-    <script src="../../Scripts/jquery-2.1.4.js"></script>
+    <%--<link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />--%>
+    <script src="../../Scripts/jquery-3.5.0.js"></script>
     <script src="../../Scripts/jquery.validate.js"></script>
-    <script src="../../Scripts/bootstrap.js"></script>
+    <%--<script src="../../Scripts/bootstrap.js"></script>--%>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <%--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>--%>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <%--<link href="~/QC/scrap/css/scrap.css" rel="stylesheet" type="text/css" />--%>
+
+    <style>
+        .full-width{
+            width:100%;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 full-width">
                     <div id="banner">
                         <div class="banner-button">
                             <asp:ImageButton ID="btnHome" runat="server" ImageUrl="~/employee_section/report/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/sunrise_employee_section/Default.aspx" onmouseover="this.src='/employee_section/report/image/button/home2.png'" onmouseout="this.src='/employee_section/report/image/button/home1.png'" />
