--- a/Intranet/masterPage/MasterPage.master
+++ b/Intranet/masterPage/MasterPage.master
@@ -12,12 +12,12 @@
     <link href="~/css/message.css" rel="stylesheet" type="text/css" />
     <link href="~/css/tabcontainer.css" rel="stylesheet" type="text/css" />
     <link href="~/css/general.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <%--<link href="~/css/bootstrap/bootstrap.css" rel="stylesheet" />--%>
     <link href="~/css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
 <%--    <script src="<%=Page.ResolveClientUrl("~/Scripts/jquery-2.1.4.js") %>"></script>
     <script src="<%=Page.ResolveClientUrl("~/Scripts/jquery.validate.js") %>"></script>
     <script src="<%=Page.ResolveClientUrl("~/Scripts/bootstrap.js") %>"></script>--%>
-    <script src="/Scripts/jquery-2.1.4.js"></script>
+    <script src="/Scripts/jquery-3.5.0.js"></script>
     <script src="/Scripts/jquery.validate.js"></script>
     <script src="/Scripts/bootstrap.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
