--- a/Nizing/master/report/MasterPage.master
+++ b/Nizing/master/report/MasterPage.master
@@ -12,7 +12,7 @@
     <link href="../../css/report/general.css" rel="stylesheet" type="text/css" />
     <link href="../../css/report/message.css" rel="stylesheet" type="text/css" />
     <link href="../../css/tabcontainer.css" rel="stylesheet" type="text/css" />
-    <link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <%--<link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />--%>
     <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
     <script src="../../Scripts/jquery-2.1.4.js"></script>
     <script src="../../Scripts/jquery.validate.js"></script>
@@ -24,12 +24,17 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <%--<link href="~/QC/scrap/css/scrap.css" rel="stylesheet" type="text/css" />--%>
+    <style>
+        .full-width{
+            width:100%;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="full-width">
                     <div id="banner">
                         <div class="banner-button">
                             <asp:ImageButton ID="btnHome" runat="server" ImageUrl="~/employee_section/report/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/employee_section/Default.aspx" onmouseover="this.src='/employee_section/report/image/button/home2.png'" onmouseout="this.src='/employee_section/report/image/button/home1.png'" />
