--- a/Intranet/masterPage/portal-master.master
+++ b/Intranet/masterPage/portal-master.master
@@ -12,12 +12,12 @@
     <link href="~/css/message.css" rel="stylesheet" type="text/css" />
     <link href="~/css/tabcontainer.css" rel="stylesheet" type="text/css" />
     <link href="~/css/general.css" rel="stylesheet" type="text/css" />
-    <link href="~/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <%--<link href="~/css/bootstrap/bootstrap.css" rel="stylesheet" />--%>
     <link href="~/css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
-<%--    <script src="<%=Page.ResolveClientUrl("~/Scripts/jquery-2.1.4.js") %>"></script>
+    <%--    <script src="<%=Page.ResolveClientUrl("~/Scripts/jquery-2.1.4.js") %>"></script>
     <script src="<%=Page.ResolveClientUrl("~/Scripts/jquery.validate.js") %>"></script>
     <script src="<%=Page.ResolveClientUrl("~/Scripts/bootstrap.js") %>"></script>--%>
-    <script src="/Scripts/jquery-2.1.4.js"></script>
+    <script src="/Scripts/jquery-3.5.0.js"></script>
     <script src="/Scripts/jquery.validate.js"></script>
     <script src="/Scripts/bootstrap.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -27,18 +27,27 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <%--<link href="~/QC/scrap/css/scrap.css" rel="stylesheet" type="text/css" />--%>
+    <style>
+        .jumbotron {
+            /*width: 100%;*/
+            height: 300px;
+            background: url(../nizing_intranet/image/banner/banner.png) no-repeat center;
+            background-color: #ff9595;
+            /*margin-bottom: 20px;*/
+        }
+
+            .jumbotron .btn {
+                float: right;
+                height: 80px;
+                margin-top: 180px;
+            }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div id="banner">
-                        <div class="banner-button">
-                            <asp:ImageButton ID="btnHome" runat="server" ImageUrl="~/nizing_intranet/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/default.aspx" onmouseover="this.src='/nizing_intranet/image/button/home2.png'" onmouseout="this.src='/nizing_intranet/image/button/home1.png'" />
-                        </div>
-                    </div>
-                </div>
+        <div class="container-fluid p-0">
+            <div class="jumbotron jumbotro-fluid">
+                <asp:ImageButton ID="btnHome" runat="server" CssClass="btn" ImageUrl="~/nizing_intranet/image/button/home1.png" Height="80" ToolTip="首頁" PostBackUrl="~/default.aspx" onmouseover="this.src='/nizing_intranet/image/button/home2.png'" onmouseout="this.src='/nizing_intranet/image/button/home1.png'" />
             </div>
         </div>
         <div class="container" style="margin-top: 40px;">
@@ -50,3 +59,4 @@
     </form>
 </body>
 </html>
+
