--- a/Nizing/master/report/MasterPage.master
+++ b/Nizing/master/report/MasterPage.master
@@ -14,9 +14,9 @@
     <link href="../../css/tabcontainer.css" rel="stylesheet" type="text/css" />
     <%--<link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />--%>
     <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
-    <script src="../../Scripts/jquery-2.1.4.js"></script>
+    <script src="../../Scripts/jquery-3.5.0.js"></script>
     <script src="../../Scripts/jquery.validate.js"></script>
-    <script src="../../Scripts/bootstrap.js"></script>
+    <%--<script src="../../Scripts/bootstrap.js"></script>--%>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
