--- a/Nizing/hr360/mobile/master/greenMaster.master
+++ b/Nizing/hr360/mobile/master/greenMaster.master
@@ -6,7 +6,7 @@
 <head runat="server">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../../../Scripts/jquery-3.5.0.min.js"></script>
+    <script src="../../../Scripts/jquery-3.5.1.min.js"></script>
     <script src="../../../Scripts/text.area.auto.adjust.js"></script>
     <script src="../../../Scripts/autosize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -125,7 +125,7 @@
                         <a class="nav-link" href="/hr360/UI05.aspx">我的考績系統</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/hr360/UI06.aspx">我的薪資明細</a>
+                        <a class="nav-link" href="/hr360/mobile/UI06.aspx">我的薪資明細</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/GoOutForm.aspx">外出預約單</a>
