--- a/Nizing/hr360/mobile/master/greenMaster.master
+++ b/Nizing/hr360/mobile/master/greenMaster.master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="../../../Scripts/jquery-3.5.1.min.js"></script>
     <script src="../../../Scripts/text.area.auto.adjust.js"></script>
     <script src="../../../Scripts/autosize.min.js"></script>
@@ -112,17 +112,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/UI01.aspx">基本資料</a>
                     </li>
-                    <li class="nav-item">
+                    <%--<li class="nav-item">
                         <a class="nav-link" href="/hr360/UI02.aspx">教育訓練</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/UI03.aspx">填寫加班單</a>
+                    </li>--%>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/hr360/UI04.aspx">我要請假</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/hr360/mobile/UI04.aspx">我要請假</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/hr360/UI05.aspx">我的考績系統</a>
+                        <a class="nav-link" href="/hr360/mobile/UI05.aspx">我的考績系統</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/UI06.aspx">我的薪資明細</a>
