--- a/Nizing/hr360/mobile/master/greenMaster.master
+++ b/Nizing/hr360/mobile/master/greenMaster.master
@@ -119,7 +119,7 @@
                         <a class="nav-link" href="/hr360/UI03.aspx">填寫加班單</a>
                     </li>--%>
                     <li class="nav-item">
-                        <a class="nav-link" href="/hr360/UI04.aspx">我要請假</a>
+                        <a class="nav-link" href="/hr360/mobile/UI04.aspx">我要請假</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/UI05.aspx">我的考績系統</a>
