--- a/Nizing/hr360/mobile/master/greenMaster.master
+++ b/Nizing/hr360/mobile/master/greenMaster.master
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="../../../Scripts/jquery-3.5.1.min.js"></script>
     <script src="../../../Scripts/text.area.auto.adjust.js"></script>
@@ -122,6 +123,9 @@
                         <a class="nav-link" href="/hr360/mobile/UI04.aspx">我要請假</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/hr360/mobile/OTForm.aspx">加班申請</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/UI05.aspx">我的考績系統</a>
                     </li>
                     <li class="nav-item">
@@ -129,7 +133,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/GoOutForm.aspx">外出預約單</a>
-                    </li>                    
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
