業績獎金計算

--- a/Nizing/employee_section/report/css/table.css
+++ b/Nizing/employee_section/report/css/table.css
@@ -21,7 +21,7 @@ tr:nth-child(2n) td {
     /*text-align: center;*/
 }
 
-tr:last-child td {
+.tfooter {
     background-color: yellow;
     /*text-align: center;*/
 }
