--- a/Nizing/employee_section/report/css/table.css
+++ b/Nizing/employee_section/report/css/table.css
@@ -25,3 +25,22 @@ tr:nth-child(2n) td {
     background-color: yellow;
     /*text-align: center;*/
 }
+
+.table {
+    text-align: center;
+}
+
+.table-striped-blue th,
+.table-striped-blue.table-has-footer tr:last-child td {
+    background-color: #29ABE2;
+    color: #ffffff;
+}
+
+.table-striped-blue tr:nth-child(2n) td {
+    background-color: #c3e8f4;
+}
+
+.table-striped-blue tr th,
+.table-striped-blue tr td {
+    border: solid 1px #ffffff;
+}
