--- a/Nizing/master/RWD.master
+++ b/Nizing/master/RWD.master
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../Content/slick/slick.css" />
     <link href="../Content/slick/slick-theme.css" rel="stylesheet" />
+    <link href="/css/RWD.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@
     <script type="text/javascript" src="../Content/slick/slick.min.js"></script>
 
     <style>
-        body {
+        .body {
             padding-top: 56px;
         }
 
@@ -28,7 +29,7 @@
 
         .navbar {
             background-color: #585858;
-            opacity: 0.8;
+            opacity: 0.9;
         }
 
             .navbar .navbar-brand {
@@ -75,7 +76,7 @@
             }
 
             .footer .card-title {
-                color: #d7d7d7;
+                color: #f7f7f7;
                 font-size: 0.9rem;
                 font-weight: bold;
             }
@@ -94,7 +95,7 @@
                 }
 
                 .footer .card-body a {
-                    color: #d7d7d7;
+                    color: #f7f7f7;
                 }
 
                     .footer .card-body a:hover {
@@ -151,6 +152,12 @@
                     padding-left: 40px;
                 }
         }
+
+        @media all and (min-width:768px) and (max-width: 992px) {
+            .body{
+                padding-top:64px;
+            }
+        }
     </style>
 
     <script type="text/javascript">
@@ -179,7 +186,6 @@
         function pageLoad(sender, args) {
         };
     </script>
-
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -187,8 +193,8 @@
     <form id="form1" runat="server">
         <div class="container-fluid">
             <header runat="server" id="navigation">
-                <nav class="navbar navbar-expand-lg fixed-top">
-                    <a class="navbar-brand" href="#">N</a>
+                <nav class="navbar navbar-expand-md fixed-top">
+                    <a class="navbar-brand" href="default.aspx">N</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavContent">
                         <span class="fas fa-bars"></span>
                     </button>
@@ -245,8 +251,10 @@
             </header>
 
         </div>
-        <asp:ContentPlaceHolder ID="body" runat="server">
-        </asp:ContentPlaceHolder>
+        <div class="body">
+            <asp:ContentPlaceHolder ID="body" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>
         <div class="footer">
             <div class="pt-3">
                 <div class="row row-m-0 row-cols-1 row-cols-md-5 w-100">
