--- a/Nizing/master/report/MasterPage.master
+++ b/Nizing/master/report/MasterPage.master
@@ -15,6 +15,7 @@
     <%--<link href="../../css/bootstrap/bootstrap.css" rel="stylesheet" />--%>
     <link href="../../css/bootstrap/bootstrap-mod.css" rel="stylesheet" />
     <%--<script src="../../Scripts/bootstrap.js"></script>--%>
+    <link href="/css/table.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/32e9a84b4a.js" crossorigin="anonymous"></script>
     <script src="../../Scripts/jquery.validate.js"></script>
