--- a/Nizing/master/report/MasterPage2021.master
+++ b/Nizing/master/report/MasterPage2021.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage2021.master.cs" Inherits="MasterPage2021" %>
 
 <!DOCTYPE html>
 
