--- a/Nizing/master/RWD.master
+++ b/Nizing/master/RWD.master
@@ -312,7 +312,7 @@
                                 </div>
                             </div>
                             <div class="pinned-item">
-                                <a href="/zh/portal" target="_blank" title="職員專區">
+                                <a href="/portal" target="_blank" title="職員專區">
                                     <i class="fas fa-user"></i>
                                 </a>
                             </div>
