--- a/Nizing/hr360/mobile/master/greenMaster.master
+++ b/Nizing/hr360/mobile/master/greenMaster.master
@@ -135,6 +135,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/hr360/mobile/GoOutForm.aspx">外出預約單</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/hr360/mobile/UI04.aspx">測試</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
